The API version was never used (e.g. increased) and did not provide any value.
The `MetaResource` operation `/version` still provides info about application name and version.

Additionally, a new `IModuleBuildDateProvider` was introduced, which allows an application to provide its own build date which is then returned as part of the `MetaResource` endpoint `/version`.

The `MetaResource` endpoint `/version` (e.g. `https://<server-url>/api/meta/version?verbose=true`) returns:

----
{
"_type": "suite.MetaVersionInfo",
"applicationName": "My Application",
"applicationVersion": "1.2.34",
"buildDate": "2024-11-20 16:01:32.000"
}
----

== Change keystroke for search and reset button
Changed the shortcut keys for search and reset to a more common key
combination.

[cols="2,1,1"]
|===
|Function |Old keystroke |New keystroke

|Open search in a table page
|F6
|Ctrl-Shift-F

|Reset button (Reset search form)
|Ctrl-F6
|Ctrl-Shift-Z
|===

== ListBox: New Default for MultiSelect

The default for the `multiSelect` property has been changed from `false` to `true`.
If it is true, the user can select all rows at once and check or uncheck them.
Also, when creating a list box with Scout JS, the default is already true, so this makes it more consistent.

== LookupColumn

The `LookupColumn` is a multivalued lookup call column. If editable it opens a popup containing a `LookupBox` in order to select multiple values.
The column supports lookup calls and code types and has a `distinct` property to enforce that the same value is not selected in more than one row.

.The `LookupColumn` with `distinct` set to `true`
image::lookup_column_salutation.png[]

.The `LookupColumn` with a hierarchical lookup call
image::lookup_column_world.png[]

== Removed deprecated code

The following code has been marked as deprecated for removal in previous releases and was now  removed:

* (Java) `ActionUtility`  -> use `MenuUtility` instead
* (TS) `Page#pageForTableRow` -> use `TableRow#page` instead