@@ -1,0 +1,20 @@
+#
+# Copyright (c) BSI Business Systems Integration AG. All rights reserved.
+# http://www.bsiag.com/
+#
+scout.application.name=Scout Widgets Test
+scout.application.version=development
+
+### Environment
+scout.devMode=true
+
+### Job manager
+scout.jobmanager.corePoolSize=10
+
+### Selenium
+scout.selenium.webAppUrl=http://localhost:8082/
+scout.selenium.screenshotOnFailure=true
+scout.selenium.driver=chrome
+scout.selenium.driverConfig[webdriver.chrome.logfile]=${java.io.tmpdir}webdriver.log
+scout.selenium.driverConfig[webdriver.chrome.verboseLogging]=true
+
